--- a/MiniDraw/MiniDraw.vcxproj.filters
+++ b/MiniDraw/MiniDraw.vcxproj.filters
@@ -74,5 +74,8 @@
     <Image Include="res\MiniDraw.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\toolbar1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
